# Imageflow

./: .gitignore  CODE_REVIEW_REPORT_2026-02-14.md  LICENSE  README.md  package.json  pyproject.toml  wails2.bat
.github/workflows/: ci.yml
backend/: app.go  app.py  app_test.go  embedded_python.go  embedded_python_windows.go  go.mod  go.sum  main.go  main.py  wails.json
backend/api/: __init__.py  desktop_api.py
backend/application/: __init__.py  image_ops.py  preview.py  task_manager.py
backend/contracts/: __init__.py  settings.py
backend/domain/: __init__.py  paths.py
backend/engines/: __init__.py  adjuster.py  compressor.py  converter.py  filter.py  gif_splitter.py  info_viewer.py  metadata_tool.py  pdf_generator.py  subtitle_stitcher.py  watermark.py  worker.py
backend/host/: window.py
backend/infrastructure/: __init__.py  dialogs.py  engine_loader.py  settings_store.py  window_ops.py
docs/: BACKEND_ARCHITECTURE.md  BACKEND_README.md  ImageFlow 综合需求文档.md  ImageFlow_Development_Guide_Final.md  QtFluent迁移成本评估报告_2026-06-07.md  Wails v3 React + Go 拖拽文件交互技术方案.md  image-compression.md  全量代码审查报告_2026-04-29.md  全量代码审查报告_2026-07-15.md  项目综合审查报告_2026-04-05.md
frontend/: App.tsx  constants.ts  index.css  index.html  index.tsx  metadata.json  package-lock.json  package.json  package.json.md5  tailwind.config.js  tsconfig.json  types.ts  vite.config.ts  wails.d.ts
python/: adjuster.py  compressor.py  converter.py  filter.py  gif_splitter.py  metadata_tool.py  pdf_generator.py  requirements.txt  watermark.py  worker.py
scripts/: dev.mjs
(+127 files in other folders)
