[project]
name = "imageflow-python"
version = "0.0.0"
requires-python = ">=3.10"
dependencies = [
  "pillow>=10.0.0",
  "piexif>=1.1.3",
  "exifread>=3.0.0",
  "reportlab>=4.0.0",
  "svglib>=1.5.1",
  "lxml>=5.0.0",
  "mozjpeg-lossless-optimization>=1.1.0",
  "imagequant>=1.0.0",
  "pyoxipng>=1.0.0",
]
